Fix row causing horizontal scrollbar.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,5 @@
 html, body {
   background: #f1f1f1;
-  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -28,4 +27,9 @@ h1 i {
   top: 50%;
   margin-left: -25px;
   margin-top: -45px;
+}
+
+.row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 }
